overflow bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ p, a {
 
 .container {
   position: relative;
+  overflow-x: hidden;
 }
 
 header {
